--- a/App-plc/CMakeLists.txt
+++ b/App-plc/CMakeLists.txt
@@ -17,7 +17,8 @@ add_executable(${APP_PLC_NAME}
 # Link to built libraries
 target_link_libraries(${APP_PLC_NAME} LINK_PUBLIC
     pico_stdlib
-    FreeRTOS)
+    FreeRTOS
+    hardware_spi)
 
 # Enable/disable STDIO via USB and UART
 pico_enable_stdio_usb(${APP_PLC_NAME} 1)
