--- a/App-plc/CMakeLists.txt
+++ b/App-plc/CMakeLists.txt
@@ -12,13 +12,15 @@ add_executable(${APP_PLC_NAME}
     ${APP_PLC_SRC_DIRECTORY}/plc.c
     ${APP_PLC_SRC_DIRECTORY}/resource1.c
     ${APP_PLC_SRC_DIRECTORY}/tasks.c
+    ${APP_PLC_SRC_DIRECTORY}/resource0.c
 )
 
 # Link to built libraries
 target_link_libraries(${APP_PLC_NAME} LINK_PUBLIC
     pico_stdlib
     FreeRTOS
-    hardware_spi)
+    hardware_spi
+    hardware_adc)
 
 # Enable/disable STDIO via USB and UART
 pico_enable_stdio_usb(${APP_PLC_NAME} 1)
